frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-ui-frontend
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-ui-frontend
  template:
    metadata:
      labels:
        app: k8s-ui-frontend
    spec:
      containers:
        - name: frontend
          # 使用本地构建好的镜像
          image: cuiziwenn/k8s-ui-frontend:v1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-ui-frontend
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: k8s-ui-frontend
  ports:
    - port: 80
      targetPort: 80
